--- a/lang.yml
+++ b/lang.yml
@@ -56,7 +56,7 @@ change-name-color-interaction: "&ePlease enter the color you would like to set t
 name-color-changed: "&eThe name color of the warp &a{warp} &ehas been set to &a{color}&e."
 change-usage-price-interaction: "&ePlease enter the usage price (Type &a{cancel} &eto stop the interaction):"
 invalid-usage-price: "&cThe usage price entered was invalid. Please enter an integer or decimal value."
-usage-price-set: "&aThe usage price of the warp &e{warp} 7ahas been set to &e${price}&a."
+usage-price-set: "&aThe usage price of the warp &e{warp} &ahas been set to &e${price}&a."
 give-assistant-interaction: "&ePlease enter the name of the player you wish to give assistant to (Type &a{cancel} &eto stop the interaction):"
 remove-assistant-interaction: "&ePlease enter the name of the player you wish to remove assistant from (Type &a{cancel} &eto stop the interaction):"
 add-list-interaction: "&ePlease enter the name of the player you wish to add to the list (Type &a{cancel} &eto stop the interaction):"
@@ -128,7 +128,7 @@ player-tpahere-denied: "&e{player} &chas denied your TPAHere request."
 teleport-toggled-off: "&eTeleportation has been toggled &cOff&e."
 teleport-toggled-on: "&eTeleportation has been toggled &aOn&e."
 no-last-location: "&cYou currently have no last teleport location."
-teleport-last-location: "&eYou will now be teleported to your last location."
+teleport-last-location: "&eYou will now be teleported to your last location in &a{duration} &eseconds."
 teleported-last-location: "&eThe player &a{player} &ehas been teleported to their last location."
 teleport-self: "&cYou are unable to teleport to yourself. Please use another player's name."
 teleport-here-self: "&cYou are unable to teleport to yourself to yourself. Please use another player's name."
