* The warp cleaner now skips any warps with the ADMIN status and properly converts the player last played time to seconds. * Added the "/warps clear <world>" command alongside the "hyperdrive.clear" permission. This command will delete all warps within the defined world.
Signed-off-by: xzot1k <alexosborne54@gmail.com>

--- a/lang.yml
+++ b/lang.yml
@@ -176,3 +176,4 @@ warp-notify: "{bar}&aThe player &e{player} &ahas teleported to the &e{warp}&a."
 warp-confirm: "&cThe warp &e{warp} &cis charging &e${price} &cto use. Please try again to confirm."
 notify-toggle: "&aTeleport notifications have been &e{status} &afor the warp &e{warp}&a!"
 invalid-warp-name: "&cThe name you entered was invalid. Please try another name."
+warps-cleared: "&aAll warps have been cleared from the world &e{world}&a!"
