--- a/lang.yml
+++ b/lang.yml
@@ -32,6 +32,7 @@ teleportation-engaged: "&eYou have been teleported to the &a{warp} &ewarp."
 teleportation-delay: "&eTeleportation to the &a{warp} &ewarp will engage in approximately &a{duration} &eseconds."
 teleportation-start: "&eYou will be teleported to the &a{warp} &ewarp in approximately &a{duration} &eseconds."
 warp-cooldown: "&cYou are unable to warp for another &e{duration} &cseconds."
+teleport-cooldown: "&cYou are unable to teleport for another &e{duration} &cseconds."
 random-teleport-fail: "&cUnable to find a safe location for teleportation after &e{tries} &cattempt(s)."
 random-teleport-admin: "&eThe player &a{player} &eis now attempting to randomly teleport to the &a{world} &eworld."
 random-teleported: "&eYou have been teleported to &aWorld: &c{world} &aX: &c{x} &aY: &c{y} &aZ: &c{z} &eafter &a{tries} &eattempts."
