--- a/plugin.yml
+++ b/plugin.yml
@@ -6,7 +6,7 @@ main: xzot1k.plugins.hd.HyperDrive
 description: A high class warp plugin allowing you and your players to warp through space and time with high control.
 load: POSTWORLD
 softdepend: [ Essentials, Vault, WorldGuard, Factions, ASkyBlock, Towny, GriefPrevention, Residence, MultiWorld, Multiverse-Core,
-              Prisma, PlaceholderAPI, CMI, HeadDatabase, PlayerWorldsPro ]
+              Prisma, PlaceholderAPI, CMI, HeadDatabase, PlayerWorldsPro, GriefDefender ]
 
 commands:
   hyperdrive:
