--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
 
     <groupId>xzot1k.plugins.hd</groupId>
     <artifactId>HyperDrive</artifactId>
-    <version>5.5.2</version>
+    <version>5.5.3 (Build ${build})</version>
 
     <properties>
-        <build>8</build>
+        <build>1</build>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
-        <finalName>${project.artifactId} ${project.version}-Build_${build}</finalName>
+        <finalName>${project.artifactId} ${project.version}</finalName><!--_Build_${build}</finalName> -->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -43,6 +43,18 @@
                                 <relocation>
                                     <pattern>io.papermc.lib</pattern>
                                     <shadedPattern>xzot1k.plugins.hd.paperlib</shadedPattern> <!-- Replace this -->
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.udojava</pattern>
+                                    <shadedPattern>xzot1k.plugins.hd.evalex</shadedPattern> <!-- Replace this -->
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.intellij</pattern>
+                                    <shadedPattern>xzot1k.plugins.hd.annotations</shadedPattern> <!-- Replace this -->
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.jetbrains.annotations</pattern>
+                                    <shadedPattern>xzot1k.plugins.hd.annotations</shadedPattern> <!-- Replace this -->
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -104,8 +116,8 @@
             <url>https://ci.ender.zone/plugin/repository/everything/</url>
         </repository>
         <repository>
-            <id>gd</id>
-            <url>https://repo.minebench.de/</url>
+            <id>griefdefender</id>
+            <url>https://repo.glaremasters.me/repository/bloodshot</url>
         </repository>
     </repositories>
 
@@ -125,7 +137,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.19.2-R0.1-SNAPSHOT</version>
+            <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -190,15 +202,15 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.github.bloodmc/GriefDefenderAPI -->
         <dependency>
-            <groupId>com.github.bloodmc</groupId>
-            <artifactId>GriefDefenderAPI</artifactId>
-            <version>-dd5aa2224c-1</version>
+            <groupId>com.griefdefender</groupId>
+            <artifactId>api</artifactId>
+            <version>2.1.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>23.0.0</version>
+            <version>23.1.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
