--- a/src/main/resources/menus.yml
+++ b/src/main/resources/menus.yml
@@ -11,9 +11,9 @@ list-menu-section:
   warp-slots: [ 10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34 ]
   # Warps with a traffic level above this value will be the warps added into the featured warps category/sort. They will then be sorted from highest to lowest.
   traffic-threshold: 100
-  # This is the default filter status the filter will start on. (Available Indexes: [0 (Public), 1 (Private), 2 (Admin), 3 (Owned), 4 (Featured)])
+  # This is the default filter status the filter will start on. (Available Indexes: [0 (Public), 1 (Private), 2 (Admin), 3 (Owned), 4 (Featured), 5 (Search)])
   default-filter-index: 0
-  # Statuses in this list will be completely skipped when cycling the filter (Available: [PUBLIC, PRIVATE, ADMIN, OWNED, FEATURED]).
+  # Statuses in this list will be completely skipped when cycling the filter (Available: [PUBLIC, PRIVATE, ADMIN, OWNED, FEATURED, SEARCH]).
   disabled-filters: []
   # This is the format that replaces the second to final status in the filter-switch, which only loads warps that are owned by the player.
   own-status-format: "Assisted or Owned"
@@ -24,8 +24,10 @@ list-menu-section:
   # This is the format that replaces the third status in the filter-switch, which only loads warps with the 'Admin' status.
   # (Note: This filter will only show for those with proper permission)
   admin-status-format: "Admin"
-  # This is the format that replaces the second status in the filter-switch, which only loads warps with the 'Private' status.
+  # This is the format that replaces the fourth status in the filter-switch, which only loads warps with the 'Private' status.
   featured-status-format: "Featured"
+  # This is the format that replaces the fifth status in the filter-switch, which will only load warps filtered by a text entry.
+  search-status-format: "Search: "
   # Under this section unlimited fully customizable items can be created and inserted into the menu.
   items:
     # This is the item's id which is used to define each individual item. With this feature unlimited
