* Fixed an issue causing the /tpaccept command to state no tpa requests exist, despite being successful.
* Fixed an issue causing the change warp status button from the edit menu to pull invalid naming conventions.

* Fixed an issue with alphabetization, traffic, and like sorting.

* Corrected the following in the lang.yml:
  - The add-command message.

Signed-off-by: BuildTools <unconfigured@null.spigotmc.org>

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -76,7 +76,7 @@ remove-list: "&aThe player &e{player} &ahas been removed from the player list of
 white-list: "&aThe player list has been set to &eWhite List&a."
 black-list: "&aThe player list has been set to &eBlack List&a."
 add-command-interaction: "&ePlease enter the command you would like to add to the warp (Type &a{cancel} &eto stop the interaction):"
-add-command: "&eThe command &a{command} &eto the warp &a{warp}&e."
+add-command: "&eAdded the &a{command} &ecommand to the warp &a{warp}&e."
 remove-command-interaction: "&ePlease enter the index of the command you would like to remove from the warp (Type &a{cancel} &eto stop the interaction):"
 command-already-exists: "&cThe command &e{command} &calready exists for the warp &e{warp}&c."
 invalid-command-index: "&cThe index entered was unable to be found or out of bounds. There is/are currently &e{command-count} &ccommand(s) on this warp."
