* Implemented configurable animations for both spawn and tp-related commands.
Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xzot1k.plugins.hd</groupId>
     <artifactId>HyperDrive</artifactId>
-    <version>5.5.3 (Build ${build})</version>
+    <version>5.5.3 <!--(Build ${build})--></version>
 
     <properties>
         <build>7</build>
