**Build 4** * Added "hyperdrive.status.PRIVATE" as a default permission under the "hyperdrive.use.*" permission.
Signed-off-by: Jeremiah Osborne <alexosborne54@gmail.com>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -101,6 +101,7 @@ permissions:
       hyperdrive.like: true
       hyperdrive.back: true
       hyperdrive.status.PUBLIC: true
+      hyperdrive.status.PRIVATE: true
 
   # ADMIN STAR PERMISSION
   hyperdrive.admin.*:
