**5.5.4 Release** * The like/dislike system for warps now allows players to change their vote. * Fixed an issue allowing players to create warps in protected region when the warp name is awaiting entry.
Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -151,7 +151,8 @@ cross-teleported: "&eYou have been teleported across servers to World: &a{world}
 warp-no-longer-exists: "&cThe warp seems to no longer exist."
 forbidden-world: "&cThe world you are attempting to randomly teleport to is forbidden."
 random-teleport-admin-forbidden: "&cUnable to randomly teleport &e{player} &cto the world &e{world} &csince it is forbidden."
-already-liked: "&cYou have already liked or disliked this warp."
+already-liked: "&cYou have already liked this warp."
+already-disliked: "&cYou have already disliked this warp."
 liked-message: "&aYou have liked the &e{warp} &awarp!"
 disliked-message: "&aYou have disliked the &e{warp} &awarp!"
 like-incorrect-server: "&cThe warp &e{warp} &cis on another server and therefore can not be liked or disliked from this server."
