--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>5.5.4</version>
 
     <properties>
-        <build>4</build>
+        <build>1</build>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
-        <finalName>${project.artifactId} ${project.version}-build_${build}</finalName><!---build_${build}</finalName> -->
+        <finalName>${project.artifactId}-${project.version}</finalName><!---${project.version}-build_${build}</finalName> -->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
