--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -151,10 +151,12 @@ cross-teleported: "&eYou have been teleported across servers to World: &a{world}
 warp-no-longer-exists: "&cThe warp seems to no longer exist."
 forbidden-world: "&cThe world you are attempting to randomly teleport to is forbidden."
 random-teleport-admin-forbidden: "&cUnable to randomly teleport &e{player} &cto the world &e{world} &csince it is forbidden."
-already-liked: "&cYou have already liked this warp."
-already-disliked: "&cYou have already disliked this warp."
+redacted-like: "&cYou have redacted your &eLike &cfor this warp."
+redacted-dislike: "&cYou have redacted your &eDislike &cfor this warp."
 liked-message: "&aYou have liked the &e{warp} &awarp!"
 disliked-message: "&aYou have disliked the &e{warp} &awarp!"
+warp-votes-reset: "&aAll likes/dislikes for the &e{warp} &awarp have been cleared."
+all-votes-reset: "&aAll likes/dislikes for &eALL &awarps have been cleared."
 like-incorrect-server: "&cThe warp &e{warp} &cis on another server and therefore can not be liked or disliked from this server."
 like-own: "&cYou can't like or dislike a warp you own."
 player-tpa-empty: "&cYou currently have no teleportation requests."
