--- a/src/main/resources/menus.yml
+++ b/src/main/resources/menus.yml
@@ -69,7 +69,7 @@ list-menu-section:
       use-player-head: true
       # This is the name of the player to use for the player head.
       # (Note: This does not accept custom textures, only real player skins and MHF.)
-      player-head-name: "MHF_ArrowRight"
+      player-head-name: "MHF_arrowright"
       # This is the material of the item. (Note: This remains untouched if the "use-player-head" option is enabled.)
       material: "ARROW"
       # This is the durability of the item's material.
@@ -91,7 +91,7 @@ list-menu-section:
         - "&eClick to view the previous page."
       slot: 52
       use-player-head: true
-      player-head-name: "MHF_ArrowLeft"
+      player-head-name: "MHF_arrowleft"
       material: "ARROW"
       durability: 0
       amount: 1
@@ -656,7 +656,7 @@ edit-menu-section:
         - "&eClick to return to the &bList Menu&e."
       slot: 25
       use-player-head: true
-      player-head-name: "MHF_ArrowLeft"
+      player-head-name: "MHF_arrowdown"
       material: "ARROW"
       durability: 0
       amount: 1
@@ -747,7 +747,7 @@ ps-menu-section:
       use-player-head: true
       # This is the name of the player to use for the player head.
       # (Note: This does not accept custom textures, only real player skins and MHF.)
-      player-head-name: "MHF_ArrowRight"
+      player-head-name: "MHF_arrowright"
       # This is the material of the item. (Note: This remains untouched if the "use-player-head" option is enabled.)
       material: "ARROW"
       # This is the durability of the item's material.
@@ -768,7 +768,7 @@ ps-menu-section:
         - "&eClick to view the next page."
       slot: 52
       use-player-head: true
-      player-head-name: "MHF_ArrowLeft"
+      player-head-name: "MHF_arrowleft"
       material: "ARROW"
       durability: 0
       amount: 1
@@ -1022,7 +1022,7 @@ custom-menus-section:
         use-player-head: true
         # This is the name of the player to use for the player head.
         # (Note: This does not accept custom textures, only real player skins and MHF.)
-        player-head-name: "MHF_Exclamation"
+        player-head-name: "MHF_arrowright"
         # This is the material of the item. (Note: This remains untouched if the "use-player-head" option is enabled.)
         material: "ARROW"
         # This is the durability of the item's material.
