--- a/pom.xml
+++ b/pom.xml
@@ -259,13 +259,15 @@
             <groupId>com.Zrips.CMI</groupId>
             <artifactId>CMI</artifactId>
             <version>9.6.10.5</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/CMI-9.6.10.6.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.bekvon.bukkit</groupId>
             <artifactId>Residence</artifactId>
             <version>5.1.4.1</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/Residence5.1.4.2.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.github.angeschossen</groupId>
