* Modifications to maven * Updates for hook checker and teleportation
Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -258,21 +258,19 @@
         <dependency>
             <groupId>com.Zrips.CMI</groupId>
             <artifactId>CMI</artifactId>
-            <version>9.6.10.5</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/CMI-9.6.10.6.jar</systemPath>
+            <version>9.6.11.2</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.bekvon.bukkit</groupId>
+            <groupId>com.bekvon.bukkit.residence</groupId>
             <artifactId>Residence</artifactId>
-            <version>5.1.4.1</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/Residence5.1.4.2.jar</systemPath>
+            <version>5.1.4.3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.angeschossen</groupId>
-            <artifactId>LandsAPI</artifactId>
-            <version>6.37.0</version>
+            <groupId>me.angeschossen.lands</groupId>
+            <artifactId>Lands</artifactId>
+            <version>6.46.2</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
